# presidio_ddm

./: DDM DEV.7z  README.md  ReleaseNotes copy 2.md  ReleaseNotes copy.md  ReleaseNotes.md  pyproject.toml  requirements.txt  setup.py  soft_reqs.txt  test_run.ps1  test_run.py
deny_list_dataset/: INIT_DDM_deny_list_With_data_BIOMETRIC.sql  INIT_DDM_deny_list_With_data_CRIME.sql  INIT_DDM_deny_list_With_data_FAITH.sql  INIT_DDM_deny_list_With_data_HEALTH.sql  INIT_DDM_deny_list_With_data_POLITICS.sql  INIT_DDM_deny_list_With_data_RACE.sql  INIT_DDM_deny_list_With_data_SEX.sql  INIT_DDM_deny_list_With_data_TRADE.sql  deny_list_tokens_c4_v1.xlsx  deny_list_tokens_ddm.xlsx  ~$deny_list_tokens_c4_v1.xlsx
dynamic_data_masking/: customers.py  main.py
dynamic_data_masking/ddm_config/: config_reader.py
dynamic_data_masking/ddm_config/analyzer_config/: all-config-C3.yaml  all-config-C4.yaml  all-config-only-C4.yaml  fr-analyzer-config-c4.yaml  (+1 more)
dynamic_data_masking/ddm_logger/: __init__.py  ddm_logger.py
dynamic_data_masking/dynamic_data_masking_customer_pipelines/: __init__.py  customers.py
dynamic_data_masking/dynamic_data_masking_pipeline/: dynamic_data_masking_pipeline.py  mappers.py
dynamic_data_masking/utils/: __init__.py  utils.py
notebooks/: e2e.ipynb
notebooks/anonimyzer/: anonimyzer.ipynb
notebooks/demo_api/: demo_api.ipynb
notebooks/deny_list_augmentation/: biometric.ipynb  crime.ipynb  health.ipynb  politics.ipynb  racial.ipynb  religion.ipynb  sex.ipynb  trade.ipynb
notebooks/logger/: logger.ipynb
notebooks/ocr/: tesseract.ipynb
(+37 files in other folders)
