[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ddm_engine"
version = "0.1.0"
description = "A CLI tool for Dynamic Data Masking."
authors = [
    { name = "Sergiy Polovynko" }
]
requires-python = ">=3.12"
dependencies = [
    "argparse",
    "presidio-analyzer",
    "presidio-anonymizer",
    "pdfplumber",
    "pytesseract",
    "Pillow",
    "opencv-python",
    "PyMuPDF",
    "python-dotenv"
]

[project.scripts]
ddm_engine = "dynamic_data_masking.main:main"

[tool.setuptools.packages.find]
include = ["dynamic_data_masking*"]

[tool.setuptools.package-data]
"dynamic_data_masking.ddm_config.analyzer_config" = [
    "all-config-C3.yaml",
    "all-config-C4.yaml"
]

[project.classifiers]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
